force-app/main/default/objects/Issue__c/Issue__c.object-meta.xml
<CustomObject>
    <label>課題・要望</label>
    <nameField>
        <label>件名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>課題・要望</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>