force-app/main/default/objects/Issue__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>課題カテゴリ</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RequirementsCategory</valueSetName>
    </valueSet>
</CustomField>