force-app/main/default/objects/Issue__c/fields/countPlan__c.field-meta.xml
<CustomField>
    <fullName>countPlan__c</fullName>
    <description>施策数をカウントして影響と概算工数の目安にしています</description>
    <label>施策数</label>
    <summaryForeignKey>Relation_Issue2Plan__c.Issue__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>