force-app/main/default/objects/Issue__c/fields/countSupport__c.field-meta.xml
<CustomField>
    <fullName>countSupport__c</fullName>
    <description>ユーザサポートレコード数をカウントすることで、要望度を可視化しています</description>
    <label>サポート数</label>
    <summaryForeignKey>Relation_Support2Issue__c.Issue__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>