force-app/main/default/objects/Issue__c/fields/fastTicket__c.field-meta.xml
<CustomField>
    <fullName>fastTicket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>検討や定義が必要なく、設定するだけのような課題の場合に使用</inlineHelpText>
    <label>単発の開発・設定</label>
    <referenceTo>Dev_Ticket__c</referenceTo>
    <relationshipLabel>課題・要望</relationshipLabel>
    <relationshipName>issue</relationshipName>
    <type>Lookup</type>
</CustomField>