force-app/main/default/objects/Issue__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TicketStatus</valueSetName>
    </valueSet>
</CustomField>