force-app/main/default/objects/Issue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>status__c</columns>
    <columns>NAME</columns>
    <columns>category__c</columns>
    <columns>countSupport__c</columns>
    <columns>countPlan__c</columns>
    <columns>fastTicket__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>